--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Algorithm Practice</title>
 </head>
+<script src="index.js"></script>
 <body>
    <h1>Algorithm Practice</h1> 
    
-   <script src="script.js"></script>
 </body>
 </html>
